# Snapshot

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  app.js  index.html  style.css
src/snapshot/: __init__.py  __main__.py  cli.py  crawl_policy.py  downloader.py  manifest.py  restore.py  utils.py  wordlist.py
src/snapshot/wordlists/: common.txt  large.txt
tests/: test_crawl_policy.py  test_crawler.py  test_features.py  test_utils.py  test_wordlist.py
