[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapshot-cli"
version = "0.1.0"
description = "Take offline snapshots of any website and restore them locally"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "snapshot contributors" }]
keywords = ["cli", "web-archive", "snapshot", "offline", "crawler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "httpx>=0.27",
    "markdownify>=0.13",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.8"]

[project.scripts]
snapshot = "snapshot.cli:main"

[project.urls]
Homepage = "https://github.com/codingsushi79/Snapshot"
Repository = "https://github.com/codingsushi79/Snapshot"

[tool.hatch.build.targets.wheel]
packages = ["src/snapshot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
